Fix style product

--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/base.css" />
     <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/respon.css" />
     <title>Reponsive</title>
   </head>
   <body>
     <div class="container">
       <div class="product">
-        <div class="product_img">
-          <img
-            src="https://cdn.pancake.vn/1/s600x600/57/c3/7a/66/aa66e5fc6d69090e25679db1f81a1185930f5a70a6d049f77bcd9856.jpg"
-            alt=""
-          />
-        </div>
+        <div class="product_img"></div>
         <div class="product_info">
           <h1 class="product_name">Mô hình Dragon Ball</h1>
 
