--- a/index.html
+++ b/index.html
@@ -40,39 +40,43 @@
             <li>Python</li>
           </ul>
         </div>
-        <div class="course1">
-          <h2>Course 1</h2>
-          <p>
-            Perferendis in facilis. Molestiae recusandae quasi voluptas
-            praesentium. Vitae quo qui voluptatem cum autem quasi magnam. Velit
-            quae et voluptatum pariatur labore.
-          </p>
-        </div>
-        <div class="course2">
-          <h2>Course 2</h2>
-          <p>
-            Fugiat quia aut. Placeat odio eius eum. Necessitatibus quis debitis
-            rerum quam adipisci. Est soluta vel ut. Est corporis dicta minima.
-            Aut quia dignissimos mollitia.
-          </p>
-        </div>
-        <div class="course3">
-          <h2>Course 3</h2>
-          <p>
-            Laboriosam aut quidem quae omnis sed aut repudiandae harum et. Eos
-            esse natus praesentium quas itaque tenetur voluptatem repellendus.
-            At ex molestias ratione eum. Et cumque quis. Aut eius omnis aut.
-            Quidem exercitationem voluptatem et ad odio rerum dolores similique.
-          </p>
-        </div>
-        <div class="course4">
-          <h2>Course 4</h2>
-          <p>
-            Laboriosam aut quidem quae omnis sed aut repudiandae harum et. Eos
-            esse natus praesentium quas itaque tenetur voluptatem repellendus.
-            At ex molestias ratione eum. Et cumque quis. Aut eius omnis aut.
-            Quidem exercitationem voluptatem et ad odio rerum dolores similique.
-          </p>
+        <div class="course">
+          <div class="course1">
+            <h2>Course 1</h2>
+            <p>
+              Perferendis in facilis. Molestiae recusandae quasi voluptas
+              praesentium. Vitae quo qui voluptatem cum autem quasi magnam.
+              Velit quae et voluptatum pariatur labore.
+            </p>
+          </div>
+          <div class="course2">
+            <h2>Course 2</h2>
+            <p>
+              Fugiat quia aut. Placeat odio eius eum. Necessitatibus quis
+              debitis rerum quam adipisci. Est soluta vel ut. Est corporis dicta
+              minima. Aut quia dignissimos mollitia.
+            </p>
+          </div>
+          <div class="course3">
+            <h2>Course 3</h2>
+            <p>
+              Laboriosam aut quidem quae omnis sed aut repudiandae harum et. Eos
+              esse natus praesentium quas itaque tenetur voluptatem repellendus.
+              At ex molestias ratione eum. Et cumque quis. Aut eius omnis aut.
+              Quidem exercitationem voluptatem et ad odio rerum dolores
+              similique.
+            </p>
+          </div>
+          <div class="course4">
+            <h2>Course 4</h2>
+            <p>
+              Laboriosam aut quidem quae omnis sed aut repudiandae harum et. Eos
+              esse natus praesentium quas itaque tenetur voluptatem repellendus.
+              At ex molestias ratione eum. Et cumque quis. Aut eius omnis aut.
+              Quidem exercitationem voluptatem et ad odio rerum dolores
+              similique.
+            </p>
+          </div>
         </div>
       </div>
       <div class="cards">
